--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@supabase/supabase-js": "^2.58.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "20.6.2",
+    "@types/pg": "^8.16.0",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "autoprefixer": "10.4.15",
@@ -59,6 +60,7 @@
     "lucide-react": "^0.446.0",
     "next": "16.1.0",
     "next-themes": "^0.4.6",
+    "pg": "^8.16.3",
     "postcss": "8.4.30",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
