--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "eslint-config-next": "16.1.0",
+    "exceljs": "^4.4.0",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.446.0",
@@ -77,6 +78,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/exceljs": "^1.3.2",
     "eslint": "9.39.2"
   }
 }
